--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         <ul class="file-list">
             <li class="file-item"><a href="carrousel/bonnard-marais.com/index.html" class="file-link">bonnard-marais.com</a></li>
         </ul>
-    </div>
+        <p class="folder-title">menu</p>
+        <ul class="file-list">
+            <li class="file-item"><a href="menu/bordeaux.fr/index.html" class="file-link">bordeaux.fr</a></li>
+        </ul>
+    </div>  
 </body>
 </html>
