ADD page recrutement.picard.fr avec menu en mode contrasté ou non

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <p class="folder-title">menu</p>
         <ul class="file-list">
             <li class="file-item"><a href="menu/bordeaux.fr/index.html" class="file-link">bordeaux.fr</a></li>
+            <li class="file-item"><a href="menu/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/index.html" class="file-link">recrutement.picard.fr</a></li>
         </ul>
     </div>  
 </body>
