ADD page college de france > carrousel

--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
     <div class="folder">
         <h2 class="folder-title">carrousel</h2>
         <ul class="file-list">
-            <li class="file-item"><a href="carrousel/bonnard-marais.com/index.html" class="file-link">bonnard-marais.com</a></li>
+            <li class="file-item">
+                <a href="carrousel/bonnard-marais.com/index.html" class="file-link">bonnard-marais.com</a>
+            </li>
+            <li class="file-item">
+                <a href="carrousel/college-de-france.fr/www.college-de-france.fr/fr.html" class="file-link">college-de-france.fr</a>
+            </li>
         </ul>
         <h2 class="folder-title">menu</h2>
         <ul class="file-list">
