--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
             
             <li class="file-item">
-                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/index.html" class="file-link">recrutement.picard.fr</a>
+                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/index.html" class="file-link">recrutement.picard.fr/entreprise</a>
                 <p class="file-description">(menu avec option mode contrasté)</p>
             </li>
         </ul>
