--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul class="file-list">
             <li class="file-item">
                 <a href="pages/bordeaux.fr/index.html" class="file-link">bordeaux.fr</a>
-                <p class="file-description">(menu à la tabulation devient visible comme au survol)</p>
+                <p class="file-description">(menu à la tabulation devient visible comme au survol habituel de la souris)</p>
             </li>
             
             <li class="file-item">
