--- a/index.html
+++ b/index.html
@@ -36,17 +36,20 @@
             <li class="file-item">
                 <a href="pages/college-de-france.fr/www.college-de-france.fr/fr.html" class="file-link">college-de-france.fr</a>
             </li>
+            <li class="file-item">
+                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/carrousel.html" class="file-link">Carrousel avec position courante indiquée seulement par la couleur</a>
+                <p class="file-description">(recrutement.picard.fr/entreprise)</p>
+            </li>
         </ul>
         <h2 class="folder-title">menu</h2>
         <ul class="file-list">
             <li class="file-item">
-                <a href="pages/bordeaux.fr/index.html" class="file-link">bordeaux.fr</a>
-                <p class="file-description">(menu à la tabulation devient visible comme au survol habituel de la souris)</p>
-            </li>
-            
+                <a href="pages/bordeaux.fr/index.html" class="file-link">Menu devient visible à la tabulation comme au survol habituel de la souris</a>
+                <p class="file-description">(bordeaux.fr)</p>
+            </li>            
             <li class="file-item">
-                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/index.html" class="file-link">recrutement.picard.fr/entreprise</a>
-                <p class="file-description">(menu avec option mode contrasté)</p>
+                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/menu.html" class="file-link">Menu avec option mode contrasté</a>
+                <p class="file-description">(recrutement.picard.fr/entreprise)</p>
             </li>
         </ul>
     </div>  
