--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <h2 class="folder-title">carrousel</h2>
         <ul class="file-list">
             <li class="file-item">
-                <a href="pages/bonnard-marais.com/" class="file-link">bonnard-marais.com</a>
+                <a href="pages/bonnard-marais.com/" class="file-link">Carrousel avec geste complexe qui défile automatiquement</a>
                 <a href="fiches/bonnard-marais.com/" class="file-link">(fiche)</a>
+                <p class="file-description">(bonnard-marais.com)</p>
             </li>
             <li class="file-item">
                 <a href="pages/college-de-france.fr/www.college-de-france.fr/fr.html" class="file-link">college-de-france.fr</a>
