ADD page with carousel only for bonnard-marais.com

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <h2 class="folder-title">carrousel</h2>
         <ul class="file-list">
             <li class="file-item">
-                <a href="pages/bonnard-marais.com/" class="file-link">Carrousel avec geste complexe qui défile automatiquement</a>
+                <a href="pages/bonnard-marais.com/carrousel.html" class="file-link">Carrousel avec geste complexe qui défile automatiquement</a>
+                -
                 <a href="fiches/bonnard-marais.com/" class="file-link">(fiche)</a>
                 <p class="file-description">(bonnard-marais.com)</p>
             </li>
