--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
                 <a href="pages/jbm-medical.com/www.jbm-medical.com/client/nos-specialites/index.html" class="file-link">jbm-medical.com</a>
                 <p class="file-description">(menu)</p>
             </li>
-            <li class="file-item">
-                <a href="pages/cma-idf.fr/www.cma-idf.fr/index.html" class="file-link">cma-idf.fr</a>
-                <p class="file-description">(puces graphiques de navigation du carrousel : Conforme 3.1, 10.9 et 10.10)</p>
-            </li>
         </ul>
         <h2 class="folder-title">12.11</h2>
         <ul class="file-list">
@@ -30,23 +26,26 @@
         <h2 class="folder-title">carrousel</h2>
         <ul class="file-list">
             <li class="file-item">
-                <a href="pages/bonnard-marais.com/carrousel.html" class="file-link">Carrousel avec geste complexe qui défile automatiquement</a>
-                -
-                <a href="fiches/bonnard-marais.com/" class="file-link">(fiche)</a>
-                <p class="file-description">(bonnard-marais.com)</p>
+                <a href="pages/cma-idf.fr/www.cma-idf.fr/carrousel-1.html" class="file-link">Carrousel avec puces de navigation conformes critères RGAA 3.1, 10.9 et 10.10  (+ boutons de navigation)</a>
+                <p class="file-description">(cma-idf.fr)</p>
             </li>
             <li class="file-item">
-                <a href="pages/college-de-france.fr/www.college-de-france.fr/fr.html" class="file-link">college-de-france.fr</a>
-            </li>
+                <a href="pages/bonnard-marais.com/carrousel.html" class="file-link">Carrousel sans geste simple (ni boutons ni de puces de navigation) et qui défile automatiquement</a>
+                <a href="fiches/bonnard-marais.com/" class="file-link">(fiche)</a>
+                <p class="file-description">(bonnard-marais.com)</p>
+            </li>            
             <li class="file-item">
                 <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/carrousel.html" class="file-link">Carrousel avec position courante indiquée seulement par la couleur</a>
                 <p class="file-description">(recrutement.picard.fr/entreprise)</p>
+            </li>
+            <li class="file-item">
+                <a href="pages/college-de-france.fr/www.college-de-france.fr/fr.html" class="file-link">college-de-france.fr</a>
             </li>
         </ul>
         <h2 class="folder-title">menu</h2>
         <ul class="file-list">
             <li class="file-item">
-                <a href="pages/bordeaux.fr/index.html" class="file-link">Menu devient visible à la tabulation comme au survol habituel de la souris</a>
+                <a href="pages/bordeaux.fr/index.html" class="file-link">Menu qui devient visible à la tabulation comme au survol habituel de la souris</a>
                 <p class="file-description">(bordeaux.fr)</p>
             </li>            
             <li class="file-item">
