Update pages college de france

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <p class="file-description">(recrutement.picard.fr/entreprise)</p>
             </li>
             <li class="file-item">
-                <a href="pages/college-de-france.fr/www.college-de-france.fr/fr.html" class="file-link">college-de-france.fr</a>
+                <a href="pages/college-de-france.fr/www.college-de-france.fr/carrousel.html" class="file-link">Carrousel avec contenu tabulable et boutons de navigation non accessibles au clavier</a>
+                <p class="file-description">(college-de-france.fr)</p>
             </li>
         </ul>
         <h2 class="folder-title">menu</h2>
