--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
 <body>
     <h1>Liste des composants</h1>
     <div class="folder">
-        <h2 class="folder-title">3.1</h2>
-        <ul class="file-list">
-            <li class="file-item">
-                <a href="pages/jbm-medical.com/www.jbm-medical.com/client/nos-specialites/index.html" class="file-link">jbm-medical.com</a>
-                <p class="file-description">(menu)</p>
-            </li>
-        </ul>
         <h2 class="folder-title">12.11</h2>
         <ul class="file-list">
             <li class="file-item">
@@ -52,6 +45,10 @@
             <li class="file-item">
                 <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/menu.html" class="file-link">Menu avec option mode contrasté</a>
                 <p class="file-description">(recrutement.picard.fr/entreprise)</p>
+            </li>
+            <li class="file-item">
+                <a href="pages/jbm-medical.com/www.jbm-medical.com/client/nos-specialites/menu.html" class="file-link">Menu dont le fond des liens change seulement de couleur de fond au survol (3.1 NC)</a>
+                <p class="file-description">(jbm-medical.com/nos-specialites)</p>
             </li>
         </ul>
     </div>  
