update structure and add margin left for component details

--- a/index.html
+++ b/index.html
@@ -4,51 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liste des composants</title>
+    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Liste des composants</h1>
     <div class="folder">
         <h2 class="folder-title">12.11</h2>
-        <ul class="file-list">
-            <li class="file-item">
+        <ul class="components-list">
+            <li class="component">
                 <a href="pages/cma-idf.fr/www.cma-idf.fr/index.html" class="file-link">cma-idf.fr</a>
-                <p class="file-description">(12.11 Conforme : menu/contenu additionnel)</p>
+                <p class="original-website-url">(12.11 Conforme : menu/contenu additionnel)</p>
             </li>
         </ul>
         <h2 class="folder-title">carrousel</h2>
-        <ul class="file-list">
-            <li class="file-item">
-                <a href="pages/cma-idf.fr/www.cma-idf.fr/carrousel-1.html" class="file-link">Carrousel avec puces de navigation conformes critères RGAA 3.1, 10.9 et 10.10  (+ boutons de navigation)</a>
-                <p class="file-description">(cma-idf.fr)</p>
+        <ul class="components-list">
+            <li class="component">
+                <a href="pages/cma-idf.fr/www.cma-idf.fr/carrousel-1.html" class="file-link">> avec puces de navigation conformes critères RGAA 3.1, 10.9 et 10.10  (+ boutons de navigation)</a>
+                <div class="component-details">
+                    <p class="badge-container">Critères impactés : <span class="badge badge-success">3.1 C</span><span class="badge badge-success">10.9 C</span><span class="badge badge-success">10.10 C</span></p>
+                    <p class="original-website-url">(cma-idf.fr)</p>
+                </div>
             </li>
-            <li class="file-item">
-                <a href="pages/bonnard-marais.com/carrousel.html" class="file-link">Carrousel sans geste simple (ni boutons ni de puces de navigation) et qui défile automatiquement</a>
-                <a href="fiches/bonnard-marais.com/" class="file-link">(fiche)</a>
-                <p class="file-description">(bonnard-marais.com)</p>
+            <li class="component">
+                <a href="pages/bonnard-marais.com/carrousel.html" class="file-link">> sans geste simple (ni boutons ni de puces de navigation) et qui défile automatiquement</a>
+                <div class="component-details">
+                    <p class="badge-container">Critères impactés : <span class="badge badge-failure">1.1 NC</span><span class="badge badge-failure">13.8 NC</span><span class="badge badge-failure">13.10 NC</span></p>
+                    <a href="fiches/bonnard-marais.com/" class="file-link">(fiche)</a>
+                    <p class="original-website-url">(bonnard-marais.com)</p>
+                </div>
             </li>            
-            <li class="file-item">
-                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/carrousel.html" class="file-link">Carrousel avec position courante indiquée seulement par la couleur</a>
-                <p class="file-description">(recrutement.picard.fr/entreprise)</p>
+            <li class="component">
+                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/carrousel.html" class="file-link">> avec position courante indiquée seulement par la couleur</a>
+                <div class="component-details">
+                    <p class="original-website-url">(recrutement.picard.fr/entreprise)</p>
+                </div>
             </li>
-            <li class="file-item">
-                <a href="pages/college-de-france.fr/www.college-de-france.fr/carrousel.html" class="file-link">Carrousel avec contenu tabulable et boutons de navigation non accessibles au clavier</a>
-                <p class="file-description">(college-de-france.fr)</p>
+            <li class="component">
+                <a href="pages/college-de-france.fr/www.college-de-france.fr/carrousel.html" class="file-link">> avec contenu tabulable et boutons de navigation non accessibles au clavier</a>
+                <div class="component-details">
+                    <p class="original-website-url">(college-de-france.fr)</p>
+                </div>
             </li>
         </ul>
         <h2 class="folder-title">menu</h2>
-        <ul class="file-list">
-            <li class="file-item">
-                <a href="pages/bordeaux.fr/menu.html" class="file-link">Sous-menu qui devient visible à la tabulation comme au survol habituel de la souris</a>     
-                <p class="file-description">(bordeaux.fr)</p>
+        <ul class="components-list">
+            <li class="component">
+                <a href="pages/bordeaux.fr/menu.html" class="file-link">> avec sous-menu qui devient visible à la tabulation comme au survol habituel de la souris</a>     
+                <div class="component-details">
+                    <p class="original-website-url">(bordeaux.fr)</p>
+                </div>
             </li>            
-            <li class="file-item">
-                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/menu.html" class="file-link">Menu avec option mode contrasté</a>
-                <p class="file-description">(recrutement.picard.fr/entreprise)</p>
+            <li class="component">
+                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/menu.html" class="file-link">> avec option mode contrasté</a>
+                <div class="component-details">
+                    <p class="original-website-url">(recrutement.picard.fr/entreprise)</p>
+                </div>
             </li>
-            <li class="file-item">
-                <a href="pages/jbm-medical.com/www.jbm-medical.com/client/nos-specialites/menu.html" class="file-link">Menu dont le fond des liens change seulement de couleur de fond au survol (3.1 NC)</a>
-                <p class="file-description">(jbm-medical.com/nos-specialites)</p>
+            <li class="component">
+                <a href="pages/jbm-medical.com/www.jbm-medical.com/client/nos-specialites/menu.html" class="file-link">> avec le fond des liens change seulement de couleur de fond au survol (3.1 NC)</a>
+                <div class="component-details">
+                    <p class="original-website-url">(jbm-medical.com/nos-specialites)</p>
+                </div>
             </li>
         </ul>
     </div>  
