--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </li>
             <li class="component">
-                <a href="pages/bonnard-marais.com/carrousel.html" class="file-link">> sans geste simple (ni boutons ni de puces de navigation) et qui défile automatiquement</a>
+                <a href="pages/bonnard-marais.com/carrousel.html" class="file-link">> sans geste simple (ni boutons ni puces de navigation) et qui défile automatiquement</a>
                 <div class="component-details">
                     <p class="badge-container">Critères impactés : <span class="badge badge-failure">1.1 NC</span><span class="badge badge-failure">13.8 NC</span><span class="badge badge-failure">13.10 NC</span></p>
                     <a href="fiches/bonnard-marais.com/" class="file-link">(fiche)</a>
