--- a/index.html
+++ b/index.html
@@ -13,59 +13,58 @@
         <h2 class="folder-title">12.11</h2>
         <ul class="components-list">
             <li class="component">
-                <a href="pages/cma-idf.fr/www.cma-idf.fr/index.html" class="file-link">cma-idf.fr</a>
+                <a href="pages/cma-idf.fr/www.cma-idf.fr/index.html" class="component-link">cma-idf.fr</a>
                 <p class="original-website-url">(12.11 Conforme : menu/contenu additionnel)</p>
             </li>
         </ul>
         <h2 class="folder-title">carrousel</h2>
         <ul class="components-list">
             <li class="component">
-                <a href="pages/cma-idf.fr/www.cma-idf.fr/carrousel-1.html" class="file-link">> avec puces de navigation conformes critères RGAA 3.1, 10.9 et 10.10  (+ boutons de navigation)</a>
-                <div class="component-details">
-                    <p class="badge-container">Critères impactés : <span class="badge badge-success">3.1 C</span><span class="badge badge-success">10.9 C</span><span class="badge badge-success">10.10 C</span></p>
-                    <p class="original-website-url">(cma-idf.fr)</p>
-                </div>
+                <a href="pages/cma-idf.fr/www.cma-idf.fr/carrousel-1.html" class="component-link">> avec puces de navigation conformes critères RGAA 3.1, 10.9 et 10.10  (+ boutons de navigation)</a>
+                <ul class="component-details">
+                    <li class="badge-container"><span class="label-detail">Critères impactés : </span><span class="badge badge-success">3.1 C</span><span class="badge badge-success">10.9 C</span><span class="badge badge-success">10.10 C</span></li>
+                    <li><span class="label-detail">Site original : </span><a href="https://www.cma-idf.fr" class="page-link">https://www.cma-idf.fr</a></li>
+                </ul>
             </li>
             <li class="component">
-                <a href="pages/bonnard-marais.com/carrousel.html" class="file-link">> sans geste simple (ni boutons ni puces de navigation) et qui défile automatiquement</a>
-                <div class="component-details">
-                    <p class="badge-container">Critères impactés : <span class="badge badge-failure">1.1 NC</span><span class="badge badge-failure">13.8 NC</span><span class="badge badge-failure">13.10 NC</span></p>
-                    <a href="fiches/bonnard-marais.com/" class="file-link">(fiche)</a>
-                    <p class="original-website-url">(bonnard-marais.com)</p>
-                </div>
-            </li>            
-            <li class="component">
-                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/carrousel.html" class="file-link">> avec position courante indiquée seulement par la couleur</a>
-                <div class="component-details">
-                    <p class="original-website-url">(recrutement.picard.fr/entreprise)</p>
-                </div>
+                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/carrousel.html" class="component-link">> avec puce de navigation indiquant la position courante seulement par la couleur</a>
+                <ul class="component-details">
+                    <li><span class="label-detail">Site original : </span><a href="https://www.recrutement.picard.fr/entreprise" class="page-link">https://www.recrutement.picard.fr/entreprise</a></li>
+                </ul>
             </li>
             <li class="component">
-                <a href="pages/college-de-france.fr/www.college-de-france.fr/carrousel.html" class="file-link">> avec contenu tabulable et boutons de navigation non accessibles au clavier</a>
-                <div class="component-details">
-                    <p class="original-website-url">(college-de-france.fr)</p>
-                </div>
+                <a href="pages/bonnard-marais.com/carrousel.html" class="component-link">> sans geste simple (ni boutons ni puces de navigation) et qui défile automatiquement</a>
+                <ul class="component-details">
+                    <li class="badge-container"><span class="label-detail">Critères impactés : </span><span class="badge badge-failure">1.1 NC</span><span class="badge badge-failure">13.8 NC</span><span class="badge badge-failure">13.10 NC</span></li>
+                    <li><span class="label-detail">Site original : </span><a href="https://www.bonnard-marais.com" class="page-link">https://www.bonnard-marais.com</a></li>
+                </ul>
+            </li>
+            <li class="component">
+                <a href="pages/college-de-france.fr/www.college-de-france.fr/carrousel.html" class="component-link">> avec contenu tabulable et boutons de navigation non accessibles au clavier</a>
+                <ul class="component-details">
+                    <li><span class="label-detail">Site original : </span><a href="https://www.college-de-france.fr" class="page-link">https://www.college-de-france.fr</a></li>
+                </ul>
             </li>
         </ul>
         <h2 class="folder-title">menu</h2>
         <ul class="components-list">
             <li class="component">
-                <a href="pages/bordeaux.fr/menu.html" class="file-link">> avec sous-menu qui devient visible à la tabulation comme au survol habituel de la souris</a>     
-                <div class="component-details">
-                    <p class="original-website-url">(bordeaux.fr)</p>
-                </div>
+                <a href="pages/bordeaux.fr/menu.html" class="component-link">> avec sous-menu qui devient visible à la tabulation comme au survol habituel de la souris</a>     
+                <ul class="component-details">
+                    <li><span class="label-detail">Site original : </span><a href="https://www.bordeaux.fr" class="page-link">https://www.bordeaux.fr</a></li>
+                </ul>
             </li>            
             <li class="component">
-                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/menu.html" class="file-link">> avec option mode contrasté</a>
-                <div class="component-details">
-                    <p class="original-website-url">(recrutement.picard.fr/entreprise)</p>
-                </div>
+                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/menu.html" class="component-link">> avec option mode contrasté</a>
+                <ul class="component-details">
+                    <li><span class="label-detail">Site original : </span><a href="https://www.recrutement.picard.fr/entreprise" class="page-link">https://www.recrutement.picard.fr/entreprise</a></li>
+                </ul>
             </li>
             <li class="component">
-                <a href="pages/jbm-medical.com/www.jbm-medical.com/client/nos-specialites/menu.html" class="file-link">> avec le fond des liens change seulement de couleur de fond au survol (3.1 NC)</a>
-                <div class="component-details">
-                    <p class="original-website-url">(jbm-medical.com/nos-specialites)</p>
-                </div>
+                <a href="pages/jbm-medical.com/www.jbm-medical.com/client/nos-specialites/menu.html" class="component-link">> avec le fond des liens changeant seulement de couleur de fond au survol (3.1 NC)</a>
+                <ul class="component-details">
+                    <li><span class="label-detail">Site original : </span><a href="https://www.jbm-medical.com/client/nos-specialites" class="page-link">https://www.jbm-medical.com/client/nos-specialites</a></li>
+                </ul>
             </li>
         </ul>
     </div>  
