--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li class="component">
                 <a href="pages/cma-idf.fr/www.cma-idf.fr/carrousel-1.html" class="component-link">> avec puces de navigation conformes critères RGAA 3.1, 10.9 et 10.10  (+ boutons de navigation)</a>
                 <ul class="component-details">
-                    <li class="badge-container"><span class="label-detail">Critères impactés : </span><span class="badge badge-success">3.1 C</span><span class="badge badge-success">10.9 C</span><span class="badge badge-success">10.10 C</span></li>
+                    <li><span class="label-detail">Critères impactés : </span><span class="badge badge-success">3.1 C</span><span class="badge badge-success">10.9 C</span><span class="badge badge-success">10.10 C</span></li>
                     <li><span class="label-detail">Site original : </span><a href="https://www.cma-idf.fr" class="page-link">https://www.cma-idf.fr</a></li>
                 </ul>
             </li>
@@ -35,7 +35,7 @@
             <li class="component">
                 <a href="pages/bonnard-marais.com/carrousel.html" class="component-link">> sans geste simple (ni boutons ni puces de navigation) et qui défile automatiquement</a>
                 <ul class="component-details">
-                    <li class="badge-container"><span class="label-detail">Critères impactés : </span><span class="badge badge-failure">1.1 NC</span><span class="badge badge-failure">13.8 NC</span><span class="badge badge-failure">13.10 NC</span></li>
+                    <li><span class="label-detail">Critères impactés : </span><span class="badge badge-failure">1.1 NC</span><span class="badge badge-failure">13.8 NC</span><span class="badge badge-failure">13.10 NC</span></li>
                     <li><span class="label-detail">Site original : </span><a href="https://www.bonnard-marais.com" class="page-link">https://www.bonnard-marais.com</a></li>
                 </ul>
             </li>
