--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li class="component">
                 <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/carrousel.html" class="component-link">> avec puce de navigation indiquant la position courante seulement par la couleur</a>
                 <ul class="component-details">
+                    <li><span class="label-detail">Critères impactés : </span><span class="badge badge-failure">3.1 NC</span></li>
                     <li><span class="label-detail">Site original : </span><a href="https://www.recrutement.picard.fr/entreprise" class="page-link">https://www.recrutement.picard.fr/entreprise</a></li>
                 </ul>
             </li>
