--- a/index.html
+++ b/index.html
@@ -1,73 +1,146 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liste des composants</title>
-    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/images/favicon.png"
+        type="image/x-icon" />
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Liste des composants</h1>
-    <div class="folder">
-        <h2 class="folder-title">12.11</h2>
-        <ul class="components-list">
-            <li class="component">
-                <a href="pages/cma-idf.fr/www.cma-idf.fr/index.html" class="component-link">cma-idf.fr</a>
-                <p class="original-website-url">(12.11 Conforme : menu/contenu additionnel)</p>
-            </li>
-        </ul>
-        <h2 class="folder-title">carrousel</h2>
-        <ul class="components-list">
-            <li class="component">
-                <a href="pages/cma-idf.fr/www.cma-idf.fr/carrousel-1.html" class="component-link">> avec puces de navigation conformes critères RGAA 3.1, 10.9 et 10.10  (+ boutons de navigation)</a>
-                <ul class="component-details">
-                    <li><span class="label-detail">Critères impactés : </span><span class="badge badge-success">3.1 C</span><span class="badge badge-success">10.9 C</span><span class="badge badge-success">10.10 C</span></li>
-                    <li><span class="label-detail">Site original : </span><a href="https://www.cma-idf.fr" class="page-link">https://www.cma-idf.fr</a></li>
-                </ul>
-            </li>
-            <li class="component">
-                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/carrousel.html" class="component-link">> avec puce de navigation indiquant la position courante seulement par la couleur</a>
-                <ul class="component-details">
-                    <li><span class="label-detail">Critères impactés : </span><span class="badge badge-failure">3.1 NC</span></li>
-                    <li><span class="label-detail">Site original : </span><a href="https://www.recrutement.picard.fr/entreprise" class="page-link">https://www.recrutement.picard.fr/entreprise</a></li>
-                </ul>
-            </li>
-            <li class="component">
-                <a href="pages/bonnard-marais.com/carrousel.html" class="component-link">> sans geste simple (ni boutons ni puces de navigation) et qui défile automatiquement</a>
-                <ul class="component-details">
-                    <li><span class="label-detail">Critères impactés : </span><span class="badge badge-failure">1.1 NC</span><span class="badge badge-failure">13.8 NC</span><span class="badge badge-failure">13.10 NC</span></li>
-                    <li><span class="label-detail">Site original : </span><a href="https://www.bonnard-marais.com" class="page-link">https://www.bonnard-marais.com</a></li>
-                </ul>
-            </li>
-            <li class="component">
-                <a href="pages/college-de-france.fr/www.college-de-france.fr/carrousel.html" class="component-link">> avec contenu tabulable et boutons de navigation non accessibles au clavier</a>
-                <ul class="component-details">
-                    <li><span class="label-detail">Site original : </span><a href="https://www.college-de-france.fr" class="page-link">https://www.college-de-france.fr</a></li>
-                </ul>
-            </li>
-        </ul>
-        <h2 class="folder-title">menu</h2>
-        <ul class="components-list">
-            <li class="component">
-                <a href="pages/bordeaux.fr/menu.html" class="component-link">> avec sous-menu qui devient visible à la tabulation comme au survol habituel de la souris</a>     
-                <ul class="component-details">
-                    <li><span class="label-detail">Site original : </span><a href="https://www.bordeaux.fr" class="page-link">https://www.bordeaux.fr</a></li>
-                </ul>
-            </li>            
-            <li class="component">
-                <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/menu.html" class="component-link">> avec option mode contrasté</a>
-                <ul class="component-details">
-                    <li><span class="label-detail">Site original : </span><a href="https://www.recrutement.picard.fr/entreprise" class="page-link">https://www.recrutement.picard.fr/entreprise</a></li>
-                </ul>
-            </li>
-            <li class="component">
-                <a href="pages/jbm-medical.com/www.jbm-medical.com/client/nos-specialites/menu.html" class="component-link">> avec le fond des liens changeant seulement de couleur de fond au survol (3.1 NC)</a>
-                <ul class="component-details">
-                    <li><span class="label-detail">Site original : </span><a href="https://www.jbm-medical.com/client/nos-specialites" class="page-link">https://www.jbm-medical.com/client/nos-specialites</a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>  
+    <header role="banner">
+        <h1>Liste des composants</h1>
+    </header>
+    <main role="main">
+        <div class="folder">
+            <h2 class="folder-title">12.11</h2>
+            <ul class="components-list">
+                <li class="component">
+                    <a href="pages/cma-idf.fr/www.cma-idf.fr/index.html"
+                        class="component-link">cma-idf.fr</a>
+                    <p class="original-website-url">(12.11 Conforme :
+                        menu/contenu additionnel)</p>
+                </li>
+            </ul>
+            <h2 class="folder-title">carrousel</h2>
+            <ul class="components-list">
+                <li class="component">
+                    <a href="pages/cma-idf.fr/www.cma-idf.fr/carrousel-1.html"
+                        class="component-link">> avec puces de navigation
+                        conformes critères RGAA 3.1, 10.9 et 10.10 (+ boutons de
+                        navigation)</a>
+                    <ul class="component-details">
+                        <li><span class="label-detail">Critères impactés :
+                            </span><span class="badge badge-success">3.1
+                                C</span><span class="badge badge-success">10.9
+                                C</span><span class="badge badge-success">10.10
+                                C</span></li>
+                        <li><span class="label-detail">Site original : </span><a
+                                href="https://www.cma-idf.fr"
+                                class="page-link">https://www.cma-idf.fr</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="component">
+                    <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/carrousel.html"
+                        class="component-link">> avec puce de navigation
+                        indiquant la position courante seulement par la
+                        couleur</a>
+                    <ul class="component-details">
+                        <li><span class="label-detail">Critères impactés :
+                            </span><span class="badge badge-failure">3.1
+                                NC</span></li>
+                        <li><span class="label-detail">Site original : </span><a
+                                href="https://www.recrutement.picard.fr/entreprise"
+                                class="page-link">https://www.recrutement.picard.fr/entreprise</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="component">
+                    <a href="pages/bonnard-marais.com/carrousel.html"
+                        class="component-link">> sans geste simple (ni boutons
+                        ni puces de navigation) et qui défile
+                        automatiquement</a>
+                    <ul class="component-details">
+                        <li><span class="label-detail">Critères impactés :
+                            </span><span class="badge badge-failure">1.1
+                                NC</span><span class="badge badge-failure">13.8
+                                NC</span><span class="badge badge-failure">13.10
+                                NC</span></li>
+                        <li><span class="label-detail">Site original : </span><a
+                                href="https://www.bonnard-marais.com"
+                                class="page-link">https://www.bonnard-marais.com</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="component">
+                    <a href="pages/college-de-france.fr/www.college-de-france.fr/carrousel.html"
+                        class="component-link">> avec contenu tabulable et
+                        boutons de navigation non accessibles au clavier</a>
+                    <ul class="component-details">
+                        <li><span class="label-detail">Site original : </span><a
+                                href="https://www.college-de-france.fr"
+                                class="page-link">https://www.college-de-france.fr</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <h2 class="folder-title">menu</h2>
+            <ul class="components-list">
+                <li class="component">
+                    <a href="pages/bordeaux.fr/menu.html"
+                        class="component-link">> avec sous-menu qui devient
+                        visible à la tabulation comme au survol habituel de la
+                        souris</a>
+                    <ul class="component-details">
+                        <li><span class="label-detail">Site original : </span><a
+                                href="https://www.bordeaux.fr"
+                                class="page-link">https://www.bordeaux.fr</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="component">
+                    <a href="pages/recrutement.picard.fr/www.recrutement.picard.fr/entreprise/menu.html"
+                        class="component-link">> avec option mode contrasté</a>
+                    <ul class="component-details">
+                        <li><span class="label-detail">Site original : </span><a
+                                href="https://www.recrutement.picard.fr/entreprise"
+                                class="page-link">https://www.recrutement.picard.fr/entreprise</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="component">
+                    <a href="pages/jbm-medical.com/www.jbm-medical.com/client/nos-specialites/menu.html"
+                        class="component-link">> avec le fond des liens
+                        changeant seulement de couleur de fond au survol (3.1
+                        NC)</a>
+                    <ul class="component-details">
+                        <li><span class="label-detail">Site original : </span><a
+                                href="https://www.jbm-medical.com/client/nos-specialites"
+                                class="page-link">https://www.jbm-medical.com/client/nos-specialites</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </main>
+    <footer role="contentinfo"  >
+        <div class="container">
+            <p>
+                © <span id="currentYear"></span> - <a href="https://www.numerik-ea.fr">numerik-ea</a>
+                |
+                <a href="https://github.com/numerik-ea/composants">
+                    Contribuer à ce site
+                </a>
+            </p>
+        </div>
+        <script>
+            document.getElementById('currentYear').textContent = new Date().getFullYear();
+        </script>
+    </footer>
 </body>
+
 </html>
