--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <li class="component">
                     <a href="pages/cma-idf.fr/www.cma-idf.fr/carrousel-1.html"
                         class="component-link">> avec puces de navigation
-                        conformes critères RGAA 3.1, 10.9 et 10.10 (+ boutons de
-                        navigation)</a>
+                        conformes + boutons de
+                        navigation</a>
                     <ul class="component-details">
                         <li><span class="label-detail">Critères impactés :
                             </span><span class="badge badge-success">3.1
@@ -96,6 +96,9 @@
                         visible à la tabulation comme au survol habituel de la
                         souris</a>
                     <ul class="component-details">
+                        <li><span class="label-detail">Critères impactés :
+                        </span><span class="badge badge-failure">10.13
+                            NC</span></li>
                         <li><span class="label-detail">Site original : </span><a
                                 href="https://www.bordeaux.fr"
                                 class="page-link">https://www.bordeaux.fr</a>
@@ -118,6 +121,9 @@
                         changeant seulement de couleur de fond au survol (3.1
                         NC)</a>
                     <ul class="component-details">
+                        <li><span class="label-detail">Critères impactés :
+                        </span><span class="badge badge-failure">3.1
+                            NC</span></li>
                         <li><span class="label-detail">Site original : </span><a
                                 href="https://www.jbm-medical.com/client/nos-specialites"
                                 class="page-link">https://www.jbm-medical.com/client/nos-specialites</a>
