Ajout lien tableau de données complexe

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                         souris</a>
                     <ul class="component-details">
                         <li><span class="label-detail">Critères impactés :
-                        </span><span class="badge badge-failure">10.13
-                            NC</span></li>
+                            </span><span class="badge badge-failure">10.13
+                                NC</span></li>
                         <li><span class="label-detail">Site original : </span><a
                                 href="https://www.bordeaux.fr"
                                 class="page-link">https://www.bordeaux.fr</a>
@@ -122,8 +122,8 @@
                         NC)</a>
                     <ul class="component-details">
                         <li><span class="label-detail">Critères impactés :
-                        </span><span class="badge badge-failure">3.1
-                            NC</span></li>
+                            </span><span class="badge badge-failure">3.1
+                                NC</span></li>
                         <li><span class="label-detail">Site original : </span><a
                                 href="https://www.jbm-medical.com/client/nos-specialites"
                                 class="page-link">https://www.jbm-medical.com/client/nos-specialites</a>
@@ -131,12 +131,26 @@
                     </ul>
                 </li>
             </ul>
+            <h2 class="folder-title">tableau de données complexe</h2>
+            <ul class="components-list">
+                <li class="component">
+                    <a href="tableau-donnees-complexe/" class="component-link">>
+                        tableau de données complexe conforme responsive</a>
+                    <ul class="component-details">
+                        <li><span class="label-detail">Site original : </span><a
+                                href="https://www.boussole-te.ecologie.gouv.fr/organisation/article/synthese-de-mon-projet"
+                                class="page-link">https://www.boussole-te.ecologie.gouv.fr/organisation/article/synthese-de-mon-projet</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </main>
-    <footer role="contentinfo"  >
+    <footer role="contentinfo">
         <div class="container">
             <p>
-                © <span id="currentYear"></span> - <a href="https://www.numerik-ea.fr">numerik-ea</a>
+                © <span id="currentYear"></span> - <a
+                    href="https://www.numerik-ea.fr">numerik-ea</a>
                 |
                 <a href="https://github.com/numerik-ea/composants">
                     Contribuer à ce site
